# semantic-search

./: .dark-factory.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: explorer-assistant.md
commands/: configure.md  explorer.md  research.md  search.md
docs/: dod.md  launchd-service.md  releasing-semantic-search.md  systemd-user-service.md
docs/design/: weighted-embedding-strategy.md
prompts/: async-startup-non-blocking-index.md  fix-index-memory-leak.md  rename-package-to-semantic-search.md
prompts/completed/: 001-rename-package-to-semantic-search.md  002-fix-index-memory-leak.md  003-add-semantic-search-cli-entrypoint.md  004-add-semantic-search-http-binary.md  005-fix-indexer-runaway-rebuild.md  006-fix-http-server-threadpool.md  007-move-cache-to-user-cache-dir.md  008-async-startup-non-blocking-index.md  009-disable-tqdm-progress-bar-in-encode.md  010-handle-on-moved-events.md  011-fix-logging-stream-to-stderr.md  012-content-fetch-core.md  013-http-content-endpoint.md  014-mcp-get-content-tool.md  015-content-fetch-tests.md  016-docs-and-changelog.md  017-relax-python-floor.md  018-cli-version-flag.md  019-semanticignore-ignore-module.md  020-semanticignore-indexer-wiring.md  021-semanticignore-watcher-reload.md  022-semanticignore-docs.md
prompts/in-progress/: 001-rename-package-to-semantic-search.md  002-fix-index-memory-leak.md  006-fix-http-server-threadpool.md  010-handle-on-moved-events.md  011-fix-logging-stream-to-stderr.md  013-http-content-endpoint.md  014-mcp-get-content-tool.md  015-content-fetch-tests.md  016-docs-and-changelog.md  020-semanticignore-indexer-wiring.md  021-semanticignore-watcher-reload.md  022-semanticignore-docs.md
scenarios/: 001-mcp-stdio-no-stdout-pollution.md  002-http-rest-search-returns-json.md  003-cli-search-prints-results.md  004-http-content-fetch-happy-path.md  005-http-content-fetch-error-responses.md
scenarios/helper/: probe-mcp.sh  setup-content-dir.sh  start-http-server.sh  stop-server.sh
scripts/: check-versions.sh
semantic_search_mcp/: __main__.py  cli.py  indexer.py  server.py
specs/: semanticignore-support.md
specs/completed/: 001-content-fetch-endpoint.md  002-relax-python-floor.md  003-semanticignore-support.md
specs/in-progress/: 001-content-fetch-endpoint.md  002-relax-python-floor.md  003-semanticignore-support.md
src/semantic_search/: __init__.py  __main__.py  cli.py  factory.py  http_server.py  ignore.py  indexer.py  logging_setup.py  server.py
src/semantic_search_mcp/: __main__.py  indexer.py  logging_setup.py  rest_server.py  server.py
tests/: __init__.py  conftest.py  test_http_server.py  test_ignore.py  test_imports.py  test_indexer.py  test_logging_setup.py  test_main.py  test_path_parsing.py  test_rest_server.py  test_server.py  test_watcher.py
