[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-search-mcp"
version = "0.1.0"
description = "MCP server for semantic search in Obsidian vaults"
requires-python = ">=3.12"
authors = [
    { name="Benjamin Borbe", email="bborbe@rocketnews.de" }
]
dependencies = [
    "fastmcp",
    "sentence-transformers",
    "faiss-cpu",
    "watchdog",
    "numpy",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
semantic-search-mcp = "semantic_search_mcp.__main__:main"

[tool.setuptools]
packages = ["semantic_search_mcp"]

