[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-search-mcp"
version = "0.1.0"
description = "MCP server for semantic search in Obsidian vaults"
requires-python = ">=3.12"
authors = [
    { name="Benjamin Borbe", email="bborbe@rocketnews.de" }
]
license = { text = "BSD-2-Clause" }
dependencies = [
    "fastmcp",
    "sentence-transformers",
    "faiss-cpu",
    "watchdog",
    "numpy",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["semantic_search_mcp", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

[project.scripts]
semantic-search-mcp = "semantic_search_mcp.__main__:main"

[tool.setuptools]
packages = ["semantic_search_mcp"]

