[project]
name = "semantic-search-mcp"
version = "0.1.0"
description = "MCP server for semantic search in Obsidian vaults"
requires-python = ">=3.14"
license = { text = "BSD-2-Clause" }
readme = "README.md"
authors = [
    { name="Benjamin Borbe", email="bborbe@rocketnews.de" }
]
dependencies = [
    "fastmcp",
    "sentence-transformers",
    "faiss-cpu",
    "watchdog",
    "numpy",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML",
]

[project.scripts]
semantic-search-mcp = "semantic_search_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_search_mcp"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

# Only truly untyped packages - reduced from global ignore_missing_imports
[[tool.mypy.overrides]]
module = "faiss.*"
ignore_missing_imports = true
# Reason: faiss-cpu lacks type stubs and py.typed marker

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true
# Reason: sentence-transformers lacks py.typed (Issue #2512 on GitHub)

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

